User johns
Date:

    Add function VideoStreamOpen and always use VideoStreamClose.
    Softer audio/video sync.
    Add function GetStats to the video output module.
    Add function ResetStart to the video output module.
    Add function SetClosing to the video output module.
    Generalize GetVaapiContext to GetHwAccelContext.
    Add compile time configurable trickspeed packets dump.
    Fix bug #1410: wrong spelled AC-3 and E-AC-3.
    Add compile time selectable h264 trickspeed workaround.
    Use ffmpeg new names AVCodecID, AV_CODEC_... .
    Fix bug: video lagging behind after recording stop.
    Reduce PES error messages.
    Fix bug #1392: Wrong value for mixing LFE.
    Fix bug: wrong grab size, introduced with AMD VDPAU.
    Use VDR SPU decoder as default.
    Fix bug: grab image negative quality isn't the default 100.
    Support AMD VDPAU with surface size != requested size.
    Add cache for auto-crop buffer.
    Fix opengl and opengl threads bugs.
    Initial opengl support with va-api only.
    Fix "broken driver" message if empty ring buffer.
    Enable seamless audio track change.
    Fix bug #1302: Unsupported pixel format crash.
    Fix the fix, when sillpicture is called in suspend mode.
    Fix crash, when sillpicture is called in suspend mode.
    Add workaround for zero width+height and ffmpeg >= 1.2.

User johns
Date: Sun Mar 17 15:52:42 CET 2013

    Release Version 0.6.0
    Adds H264 only hardware decoder for still-pictures.
    Enable optional VDR-SPU deocder support.

User anbr
Date: Sun Mar 17 15:49:46 CET 2013

    Update german translation.

User cyril
Date: Wed Mar 6 17:05:10 CET 2013

    Adds raise softhddevice video window support.

User johns
Date: Wed Mar 6 10:30:27 CET 2013

    Adds optional only complete mpeg packets support.
    Fixes text of EAC-3 pass-through setup.
    Try to start or connect to X11 server with -xx.
    Try to use HBR (High Bit-Rate) for EAC3.
    Improved pass-through (PCM+EAC3) support.